[gd_scene load_steps=9 format=2]

[ext_resource path="res://Marcianito/Scripts/Marcianito.gd" type="Script" id=1]
[ext_resource path="res://Marcianito/Vehiculo 12.png" type="Texture" id=2]
[ext_resource path="res://Marcianito/Vehiculo 1 fly (2)2.png" type="Texture" id=3]
[ext_resource path="res://Marcianito/Vehiculo 1 die2.png" type="Texture" id=4]
[ext_resource path="res://SFX/smb_mariodie.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/smb3_jump.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 2.73361

[node name="Marcianito" type="RigidBody2D"]
scale = Vector2( 0.0650738, 0.055783 )
gravity_scale = 10.0
script = ExtResource( 1 )

[node name="Anim" type="AnimatedSprite" parent="."]
position = Vector2( 0.191772, -36.8885 )
frames = SubResource( 1 )
animation = "fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.93548, -45.6403 )
rotation = -3.14159
scale = Vector2( 8.88087, -10.3112 )
shape = SubResource( 2 )

[node name="die_sf" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Musica"

[node name="flap_sf" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -18.175
pitch_scale = 0.85
bus = "Sonido"
[connection signal="finished" from="die_sf" to="." method="_on_die_sf_finished"]
